fix spacing on login/sign up pages #408

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -45,12 +45,15 @@
 html {
   font: 100% Helvetica, sans-serif;
 }
-body {
-  max-width: 100%;
+html, body {
+  height: 100%;
+  width: 100%:;
+}
+body, html {
   margin: 0;
   padding: 0;
   line-height: 1.5;
-  background: #Fafafa;
+  background: #fff;
 }
 body > * {
   -webkit-box-sizing: border-box;
@@ -99,6 +102,7 @@ body > * {
   height: 100%;
   margin-top: 140px;
   margin-bottom: 50px;
+  background: #fafafa;
 }
 #call-to-action {
   width: 100%;
@@ -192,7 +196,7 @@ body > * {
 }
 #form {
   border: 1px solid #dbdbdb;
-  background: white;
+  background: #fafafa;
 }
 #help-nav{
   margin-top: 170px;
@@ -208,6 +212,8 @@ body > * {
 }
 #landing-page {
   margin-top: 185px;
+  background: white;
+  height: 100%;
 }
 #list-view-article {
   background: white;
@@ -473,7 +479,7 @@ input[type="number"], input[type="search"], input[type="tel"], input[type="time"
   background-color: #FFFFFF;
   font-family: inherit;
   border: none;
-  border-bottom: 1px solid #dbdbdb;
+  border: 2px solid #dbdbdb;
   color: #444444;
   border-radius: 3px;
   font-size: 1em;
@@ -852,9 +858,6 @@ table.nav h3 {
   }
   #links ul li a{
     font-size: 14px;
-  }
-  #loginwall, #summary {
-    max-width: 90%;
   }
   #loginwall {
     padding: 100px 0 0 0;
